短信验证码登录

--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>spring-social-web</artifactId>
             <version>${org.springframework.social.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
 
         <!-- 断点 -->
         <!--<dependency>
